// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should close when document has mousedown event 1`] = `
<div style="visibility: visible; display: none; top: 0px; left: 0px;">
  <div class="popover clay-popover-top hide ddm-share-url-popover">
    <div class="arrow"></div>
    <div class="popover-header">Liferay</div>
    <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
  </div>
</div>
`;

exports[`Popover should close when it is already opened and the alignedElement is clicked 1`] = `
<div style="visibility: visible; display: none; top: 0px; left: 0px;">
  <div class="popover clay-popover-top ddm-share-url-popover">
    <div class="arrow"></div>
    <div class="popover-header">Liferay</div>
    <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
  </div>
</div>
`;

exports[`Popover should open when alignedElement is clicked 1`] = `
<div style="display: none; visibility: visible;">
  <div class="popover clay-popover-none hide ddm-share-url-popover">
    <div class="popover-header">Liferay</div>
    <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
  </div>
</div>
`;

exports[`Popover should open when the visible property changes 1`] = `
<div style="visibility: visible; top: 0px; left: 0px;">
  <div class="popover clay-popover-top ddm-share-url-popover">
    <div class="arrow"></div>
    <div class="popover-header">Liferay</div>
    <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
  </div>
</div>
`;

exports[`Popover should render popover opened 1`] = `
<div style="visibility: visible; display: none;">
  <div class="popover clay-popover-none ddm-share-url-popover">
    <div class="popover-header">Liferay</div>
    <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
  </div>
</div>
`;

exports[`Popover should render the default markup 1`] = `
<div style="display: none; visibility: visible;">
  <div class="popover clay-popover-none hide ddm-share-url-popover">
    <div class="popover-header">Liferay</div>
    <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
  </div>
</div>
`;
